--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,29 @@
 body{
   text-align: center;
 }
+
+.Molly {
+  font-size: 100px;
+  font-family: serif;
+  font-weight: bolder;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+.row{
+  display: flex;
+}
+
+.column{
+  flex: 33.33%;
+  padding: 5px;
+
+}
+
+.contact{
+  font-size: 24px;
+  font-family: serif;
+  font-weight: bold;
+}
